--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,16 @@
 name: Build Site2App APK
 
 on:
-  workflow_dispatch: # يسمح لك بتشغيله يدوياً من موقع جيت هب أيضاً
+  workflow_dispatch: # للسماح لك بالتشغيل اليدوي من جيت هب
+  repository_dispatch:
+    types: [build-android-app] # هذا هو السطر السحري الذي يجعل "الزر" في موقعك يعمل ويطلق عملية البناء
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4 # تحديث لآخر إصدار لضمان السرعة
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -26,5 +28,5 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: Clean-App-Release
+          name: Generated-App-APK
           path: app/build/outputs/apk/debug/app-debug.apk
