--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,7 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
-	package="mgks.os.swv">
+	xmlns:tools="http://schemas.android.com/tools">
 
 	<supports-screens
 		android:anyDensity="true"
